--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <artifactId>jersey-servlet</artifactId>
             <version>1.19</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.3.8.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
