--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.mail.username=firemapfr@gmail.com
 spring.mail.password=pabzjggejoudnbko
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
+
+appVersion = 1.0.0
