sending a single string for version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.mail.password=pabzjggejoudnbko
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 
-appVersion = 1.0.0
+appVersion = ["1.0.0"]
